use neovim as kitty's scrollback pager

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,7 +7,7 @@ include current-theme.conf
 remember_window_size  yes
 initial_window_width  640
 initial_window_height 400
-background_opacity 0.85
+background_opacity 0.88
 background_blur 20
 tab_bar_edge top
 tab_bar_style powerline
@@ -21,6 +21,9 @@ font_size   14
 
 # Cursor
 cursor_trail 3
+
+# Scrollback
+scrollback_pager /opt/homebrew/bin/nvim -c "map <silent> q :qa!<CR>" -c "set shell=zsh scrollback=100000 norelativenumber termguicolors laststatus=0 clipboard+=unnamedplus" -c "autocmd TermOpen * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)" -c 'autocmd BufEnter * execute "bdelete 1"' -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
 # Keymaps
 macos_option_as_alt yes
