--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -17,13 +17,13 @@ macos_show_window_title_in menubar
 
 # Font
 font_family FiraCode Nerd Font Mono
-font_size   14
+font_size   14.5
 
 # Cursor
 cursor_trail 3
 
 # Scrollback
-scrollback_pager /opt/homebrew/bin/nvim -c "map <silent> q :qa!<CR>" -c "set shell=zsh scrollback=100000 norelativenumber termguicolors laststatus=0 clipboard+=unnamedplus" -c "autocmd TermOpen * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)" -c 'autocmd BufEnter * execute "bdelete 1"' -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
+scrollback_pager nvim -c "map <silent> q :qa!<CR>" -c "set shell=zsh scrollback=100000 norelativenumber termguicolors laststatus=0 clipboard+=unnamedplus" -c "autocmd TermOpen * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)" -c 'autocmd BufEnter * execute "bdelete 1"' -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
 # Keymaps
 macos_option_as_alt yes
