--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -30,3 +30,7 @@ macos_option_as_alt yes
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+left  previous_tab
+map cmd+right next_tab
