--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -1,5 +1,12 @@
 [manager]
 prepend_keymap = [
-	{ on = [ "<C-f>" ], run = 'seek 5', desc = "Seek down 5 units in the preview content" },
-	{ on = [ "<C-b>" ], run = 'seek -5', desc = "Seek down 5 units in the preview content" },
+  { on = [
+    "<C-f>",
+  ], run = 'seek 5', desc = "Seek down 5 units in the preview content" },
+  { on = [
+    "<C-b>",
+  ], run = 'seek -5', desc = "Seek down 5 units in the preview content" },
+  { on = [
+    "T",
+  ], run = "plugin max-preview", desc = "Maximize or restore preview" },
 ]
