--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,7 @@ font_size   14.5
 cursor_trail 3
 
 # Scrollback
-scrollback_pager nvim -c "map <silent> q :qa!<CR>" -c "set shell=zsh scrollback=100000 norelativenumber termguicolors laststatus=0 clipboard+=unnamedplus" -c "autocmd TermOpen * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)" -c 'autocmd BufEnter * execute "bdelete 1"' -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
+scrollback_pager nvim --noplugin -c "map <silent> q :qa!<CR>" -c 'highlight Normal guibg=NONE ctermbg=NONE' -c 'highlight NonText guibg=NONE ctermbg=NONE' -c "set shell=zsh scrollback=100000 norelativenumber termguicolors laststatus=0 clipboard+=unnamedplus" -c "autocmd TermOpen * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)" -c 'autocmd BufEnter * execute "bdelete 1"' -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
 # Keymaps
 macos_option_as_alt yes
