--- a/ghostty/config
+++ b/ghostty/config
@@ -1,5 +1,5 @@
 # Appearance
-theme = catppuccin-mocha
+theme = Catppuccin Mocha
 font-family = "FiraCode Nerd Font Mono"
 font-size = 14
 window-height = 40
@@ -14,3 +14,9 @@ clipboard-read = allow
 clipboard-paste-protection = false
 shell-integration = zsh
 
+# custom-shader = shader-playground/shaders/cursor_smear.glsl
+# custom-shader = shader-playground/shaders/cursor_smear_fade.glsl
+custom-shader = shader-playground/shaders/cursor_smear_gradient.glsl
+# custom-shader = shader-playground/shaders/cursor_blaze.glsl
+# custom-shader = shader-playground/shaders/cursor_blaze_tapered.glsl
+# custom-shader = shader-playground/shaders/cursor_frozen.glsl
