--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,6 +23,7 @@ font_size   14.5
 cursor_trail 3
 
 # Scrollback
+scrollback_lines 20000
 scrollback_pager nvim --noplugin -c "map <silent> q :qa!<CR>" -c 'highlight Normal guibg=NONE ctermbg=NONE' -c 'highlight NonText guibg=NONE ctermbg=NONE' -c "set shell=zsh scrollback=100000 norelativenumber termguicolors laststatus=0 clipboard+=unnamedplus" -c "autocmd TermOpen * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)" -c 'autocmd BufEnter * execute "bdelete 1"' -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
 # Keymaps
@@ -34,3 +35,5 @@ map cmd+4 goto_tab 4
 map cmd+5 goto_tab 5
 map cmd+left  previous_tab
 map cmd+right next_tab
+map cmd+alt+l next_tab
+map cmd+alt+h previous_tab
