feat: update config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -37,3 +37,5 @@ map cmd+left  previous_tab
 map cmd+right next_tab
 map cmd+alt+l next_tab
 map cmd+alt+h previous_tab
+map cmd+a send_text all \x10
+map cmd+b send_text all \x10
