--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@
 # 使用现代配置路径 (~/.config/tmux)
 set -g base-index 1
 setw -g pane-base-index 1
+set-option -g renumber-windows on
 
 # 使用 256 色
 set -g default-terminal "screen-256color"
@@ -22,17 +23,20 @@ set -g history-limit 10000
 # 消息提示显示时间（单位 ms）
 set -g display-time 1000
 
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # ===============================
 # ⚡️ 快捷键绑定
 # ===============================
 
-# 改变默认 prefix 键为 Ctrl + '
-unbind C-b
-set -g prefix C-a
-
-# 确保能正确识别前缀键
-bind C-a send-prefix
+# 改变默认 prefix 键为 Ctrl + a
+# unbind C-b
+set -g prefix C-b
+bind C-b send-prefix
 
 # 重新加载配置
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config ✅"
@@ -41,23 +45,26 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config ✅
 # 🪟 面板操作（使用 Vim 风格）
 # ===============================
 
-bind -r n next-window
-bind -r p previous-window
-bind -r L next-window
-bind -r H previous-window
+bind n next-window
+bind p previous-window
+bind L next-window
+bind H previous-window
 
 # 分屏
 bind | split-window -h
 bind - split-window -v
 
+# 清屏
+bind K run "tmux send-keys -R; tmux clear-history"
+
 # 关闭面板
 bind x kill-pane
 
 # 在 h/j/k/l 之间移动
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
 # 交换面板位置（可选）
 # bind H swap-pane -L
@@ -74,10 +81,22 @@ bind -r _ resize-pane -D 2
 # 🎨 外观美化（可按需修改）
 # ===============================
 
-set -g status-bg black
-set -g status-fg white
-set -g status-left "#[fg=green]#S#[default]"
-set -g status-right "#[fg=yellow]%Y-%m-%d #[fg=cyan]%H:%M#[default]"
+set -g status-position top
+set -g status-style default
+set -g status-left "#[fg=green]⫸ #S#[default] "
+set -g @bg default
+set -g @fg "#aaaaaa"
+set -g @fg-current "#89B4FB"
+
+# set -g status-justify "absolute-centre"
+set -g status-justify "left"
+setw -g window-status-separator " ⟢ "
+set -g window-status-style "bg=#{@bg},fg=#{@fg}"
+set -g window-status-format " #W "
+set -g window-status-current-format "#[bg=#{@bg},fg=#{@fg-current},bold] #W #[fg=#39BAE6,bg=#{@bg}]#{?window_zoomed_flag,󰊓,}#[fg=#{@fg},bg=default]"
+set -g status-right '#{prefix_highlight} #[fg=#7196d1]#(echo "#{pane_current_path}" | sed "s|$HOME|~|") '
+set -g status-right-length 1000
+set -g status-left-length 1000
 
 # ===============================
 # 🧠 其他实用设置
@@ -85,18 +104,14 @@ set -g status-right "#[fg=yellow]%Y-%m-%d #[fg=cyan]%H:%M#[default]"
 
 # 复制模式使用 vi 风格
 setw -g mode-keys vi
+set -g set-clipboard on
+bind-key -T copy-mode-vi v send -X begin-selection
+unbind-key -T copy-mode-vi y
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi Escape send -X clear-selection
 
 # 鼠标复制兼容模式
 bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel
-
-
-# plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
 run '~/.config/tmux/plugins/tpm/tpm'
 
