--- a/ghostty/config
+++ b/ghostty/config
@@ -21,6 +21,8 @@ background-blur = 10
 gtk-tabs-location = hidden
 scrollback-limit = 10_000
 window-theme = ghostty
+window-decoration = auto
+window-show-tab-bar = never
 clipboard-read = allow
 clipboard-paste-protection = false
 shell-integration = zsh
